--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.4",
     "framer-motion": "^12.27.2",
     "next": "16.1.4",
     "react": "19.2.3",
